hphp/hack/test/typecheck/records/record_decl_bad_init.php
<?hh

record A {
  int x = null;
}
